# SubDependency_CodeLine_Analysis

./: .gitignore  LICENSE  README.md  analysis_result.json
SBOM_generator/: Interfaces.ts  index.ts  package-lock.json  package.json
ast_analyzer/: analyzer.ts  functionCallsMap.json  java_analyzer.ts  java_analyzer_utils.ts  java_ast_functionmap.json  java_ast_local_file_analysis.json  java_ast_third_party_analysis.json  java_import_analyzer.ts  java_meta_ast_analyzer.ts  java_variable_analyzer.ts  metaAst.json  package-lock.json  package.json  rust_analyzer.ts  sub_ast  tsconfig.json
ast_visualizer/visualizer/: index.html  package-lock.json  package.json
ast_visualizer/visualizer/src/: App.tsx  index.css
java/Calculator-master/: bom-test.json
java/Calculator-master /: bom-test.xml
java/Encryption-test/: bom-test.json  bom-test.xml  bom.json  pom.xml
java/ast_generator/: ast.json  pom.xml
jd-cli-output/junit/extensions/: ActiveTestSuite.java  RepeatedTest.java  TestDecorator.java  TestSetup.java  package-info.java
jd-cli-output/junit/framework/: Assert.java  AssertionFailedError.java  ComparisonCompactor.java  ComparisonFailure.java  JUnit4TestAdapter.java  JUnit4TestAdapterCache.java  JUnit4TestCaseFacade.java  Protectable.java  Test.java  TestCase.java  TestFailure.java  TestListener.java  (+3 more)
python/: analysis_result.json  requirements.txt  test.py
rust/ast_analyzer/: analyzer.ts  functionCallsMap.json  package-lock.json  package.json
rust/ast_generator/: Cargo.toml  ast.json  output.txt
rust/ast_generator/src/: main.rs
rust/snake/: Cargo.toml
(+1623 files in other folders)
