[package]
name = "ast_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
piston_window = "*"
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.3"
cc="*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
